--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "lumiashop-testing",
+  "name": "cypress-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
     "test-ui": "cypress open --browser chrome",
     "test": "cypress run --browser chrome",
+    "backend": "node server.js",
     "make-steps": "node _auto-generate-step-definitions.js"
   },
   "cypress-cucumber-preprocessor": {
@@ -26,7 +26,6 @@
     "cypress": "10.7"
   },
   "dependencies": {
-    "chai": "^4.3.7",
     "express": "^4.18.2"
   }
 }
